changes pic issues

--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -119,25 +119,25 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-        <%= image_tag('carousel/beforen1.jpg') %>
+        <%= image_tag('carousel/beforen1.png') %>
       <div class="carousel-caption">
           <h3>Lawn Care: Before</h3>
       </div>
     </div>
     <div class="item">
-        <%= image_tag('carousel/aftern1.jpg') %>
+        <%= image_tag('carousel/aftern1.png') %>
       <div class="carousel-caption">
           <h3>Lawn Care: After</h3>
       </div>
     </div>
     <div class="item">
-        <%= image_tag('carousel/beforen2.jpg') %>
+        <%= image_tag('carousel/beforen2.png') %>
       <div class="carousel-caption">
           <h3>Landscaping: Before</h3>
       </div>
     </div>
     <div class="item">
-        <%= image_tag('carousel/aftern2.jpg') %>
+        <%= image_tag('carousel/aftern2.png') %>
       <div class="carousel-caption">
           <h3>Landscaping: After</h3>
       </div>
@@ -255,8 +255,8 @@
             </div>
             <div class="col-sm-6">
                 <div class="team-member">
-                    <%= image_tag("team/danielsm2.jpg", :class=> "img-responsive img-circle") %>
-                    <h4>Daniel Aikens</h4>
+                    <%= image_tag("team/jaecoopysm.jpg", :class=> "img-responsive img-circle") %>
+                    <h4>Jessica Puckett</h4>
                     <p class="text-muted">Sales and Lead Manager</p>
                 </div>
             </div>
