changes pic issues

--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -255,7 +255,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="team-member">
-                    <%= image_tag("team/jaecoopysm.jpg", :class=> "img-responsive img-circle") %>
+                    <%= image_tag("team/jaecopysm.jpg", :class=> "img-responsive img-circle") %>
                     <h4>Jessica Puckett</h4>
                     <p class="text-muted">Sales and Lead Manager</p>
                 </div>
